[gd_scene load_steps=4 format=3 uid="uid://cwt0l7o486lc3"]

[ext_resource type="Script" path="res://scenes/UI/settings/InputRemap.gd" id="1_pf0px"]
[ext_resource type="PackedScene" uid="uid://bpx0m6dtf8sj1" path="res://scenes/UI/settings/remaper.tscn" id="2_aou3r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eu2uo"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="InputRemap" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pf0px")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eu2uo")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Seperator" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Input Remap"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionList" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Remaper" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper2" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper3" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper4" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper5" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper6" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="Remaper7" parent="Panel/VBoxContainer/ActionList" instance=ExtResource("2_aou3r")]
layout_mode = 2

[node name="OtherButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Reset" type="Button" parent="Panel/VBoxContainer/OtherButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Reset To Default"

[node name="HSeparator" type="Control" parent="Panel/VBoxContainer/OtherButtonContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="Back" type="Button" parent="Panel/VBoxContainer/OtherButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Go Back"

[node name="InvalidRemapDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="Panel/VBoxContainer/OtherButtonContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OtherButtonContainer/Back" to="." method="_on_back_pressed"]
